# Task-Manager

./: README.md  pyproject.toml
task_manager/: hooks.py
task_manager/task_manager/doctype/task/: task.js  task.json  task.py  test_task.py
